--- a/src/components/PLayers.scss
+++ b/src/components/PLayers.scss
@@ -1,3 +1,25 @@
-#players {
-    color: #1ded01
-  } 
+// $aaa: #b31376;
+// #players {
+  
+// button{
+//     background-color: #fff;
+//     color: $aaa;
+//     border:none;
+//     font-weight: bold;
+// }
+//   li{
+//         &:first-child{
+//             color:$aaa;
+//         }
+//     }
+    
+//     color: #1ded01
+//   } 
+//   @media screen and(min-width: 500px){
+//       #players{
+//           color: #04a39b;
+//           li{
+//             color: #e64506;
+//         }
+//       }
+//   }
